objects/User.object
<CustomObject>
    <fields>
        <fullName>AW_AtWorkUsername__c</fullName>
        <description>Users at Work username</description>
        <label>AtWork Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_BranchId__c</fullName>
        <description>Branch ID for user</description>
        <label>Branch Id</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AW_Branch__c</fullName>
        <description>Branch Name of User</description>
        <label>Branch</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_CommunityUrl__c</fullName>
        <description>URL for Community</description>
        <formula>$CustomMetadata.AW_SurveySetting__mdt.AW_SurveySetting.AW_CommunityURL__c &amp; &quot;/s&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Community Url</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_ConsultantCode__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Users consultant code</description>
        <externalId>true</externalId>
        <label>Consultant Code</label>
        <length>250</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>AW_LastLeadAllocationDate__c</fullName>
        <description>This field holds the  date for last lead allocation to this user</description>
        <label>Last Lead Allocation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AW_LastPerformanceAPIRunDate__c</fullName>
        <description>This field holds the latest date on which the Performance was received from SOLOH</description>
        <label>Last Performance API Run Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AW_NumberOfLeadAllocation__c</fullName>
        <description>This field hold the number of leads allocation to this user.</description>
        <label>Number of Lead Allocation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AW_Opt_in_out__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Liberty Advisers/Sales leaders are used to opt in/out to get orphans clients.</description>
        <label>Opt in/out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AW_ReceiveLeads__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Is the user allowed to receive Leads?</description>
        <label>Receive Leads</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AW_RegionId__c</fullName>
        <description>ID for the user&apos;s region</description>
        <label>Region Id</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AW_Region__c</fullName>
        <description>Region from which the user belongs</description>
        <label>Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_SubRegionId__c</fullName>
        <description>ID for user&apos;s subregion</description>
        <label>Sub Region Id</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AW_SubRegion__c</fullName>
        <description>User&apos;s Sub Region</description>
        <label>Sub Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_UACFID__c</fullName>
        <description>Users unique Liberty ID</description>
        <externalId>true</externalId>
        <label>UACF ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_UnitId__c</fullName>
        <description>ID for the user&apos;s unit</description>
        <label>Unit Id</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AW_Unit__c</fullName>
        <description>Unit of the User</description>
        <label>Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__ReferrerScore__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Referrer Score</description>
        <label>Referrer Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>et4ae5__Default_ET_Page__c</fullName>
        <label>Default Marketing Cloud Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__Default_MID__c</fullName>
        <label>Default MID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__ExactTargetForAppExchangeAdmin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Marketing Cloud for AppExchange Admin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__ExactTargetForAppExchangeUser__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Marketing Cloud for AppExchange User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__ExactTargetUsername__c</fullName>
        <label>Marketing Cloud Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__ExactTarget_OAuth_Token__c</fullName>
        <label>@deprecated</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>et4ae5__ValidExactTargetAdmin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Valid Marketing Cloud Admin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__ValidExactTargetUser__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Valid Marketing Cloud User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Assignment_Group_Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Specify whether a user is an active member of Q-assign Assignment Groups or not. Only active members can be assigned jobs.</description>
        <inlineHelpText>If checked, user will be enabled for Q-assign Assignment Groups and can be assigned jobs if an active member of a Q-assign Assignment Group. If unchecked, the user will be inactive for Q-assign Assignment Groups and cannot be assigned jobs.</inlineHelpText>
        <label>Available for Q-Assign</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pi__Can_View_Not_Assigned_Prospects__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Can View Not Assigned Prospects</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pi__Pardot_Api_Key__c</fullName>
        <label>Pardot Api Key</label>
        <length>100</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>pi__Pardot_Api_Version__c</fullName>
        <label>Pardot Api Version</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__Pardot_User_Id__c</fullName>
        <label>Pardot User Id</label>
        <length>100</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>pi__Pardot_User_Key__c</fullName>
        <label>Pardot User Key</label>
        <length>100</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>pi__Pardot_User_Role__c</fullName>
        <label>Pardot User Role</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>ActiveAdmiins</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>Service Account,Administrator</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Admins</label>
    </listViews>
    <listViews>
        <fullName>ActiveServiceAccounts</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>Service Account</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Service Accounts</label>
    </listViews>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
    </listViews>
    <listViews>
        <fullName>Active_Advisers_and_Managers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>Adviser,Leader,Executive</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Advisers and Managers</label>
    </listViews>
    <listViews>
        <fullName>Active_Community_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>Liberty Client Community User</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Community Users</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.PROFILE.USERTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Advisers_and_Managers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>Adviser,Leader,Executive</value>
        </filters>
        <label>All Advisers and Managers</label>
    </listViews>
    <listViews>
        <fullName>Customer_Community_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.USERTYPE</field>
            <operation>equals</operation>
            <value>P,C,c,b</value>
        </filters>
        <label>Customer Community Users</label>
    </listViews>
    <listViews>
        <fullName>Liberty_Health</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>SD Liberty Health</value>
        </filters>
        <label>Liberty Health</label>
        <language>en_US</language>
    </listViews>
    <sharingModel>Read</sharingModel>
</CustomObject>